adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1> Olá, Mundo! </h1>
     <hr>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus labore soluta assumenda quisquam dolor delectus veniam quos autem, nam odio! Nulla quis incidunt placeat, eos laboriosam iusto porro suscipit laborum! </p>
+    <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores exercitationem sapiente recusandae. Nam soluta dicta cupiditate voluptate nobis, ex ipsum enim tempore expedita necessitatibus! Nulla beatae velit quos aliquid officia. </p>
 </body>
 </html>
